--- a/testcases/kernel/syscalls/keyctl/Makefile
+++ b/testcases/kernel/syscalls/keyctl/Makefile
@@ -18,8 +18,8 @@
 
 top_srcdir		?= ../../../..
 
-keyctl02: LDLIBS	+=-lpthread $(KEYUTILS_LIBS)
-keyctl03: LDLIBS	+=$(KEYUTILS_LIBS)
+keyctl02: LDLIBS	+=-lpthread #$(KEYUTILS_LIBS)
+#keyctl03: LDLIBS	+=$(KEYUTILS_LIBS)
 
 include $(top_srcdir)/include/mk/testcases.mk
 
